--- a/Gestao_PetShop/src/main/resources/application.properties
+++ b/Gestao_PetShop/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 spring.mvc.locale-resolver=fixed
 spring.mvc.locale=pt_BR
 
+spring.http.multipart.max-file-size=256KB
+spring.http.multipart.max-request-size=256KB
+
 # ===============================
 # = DATA SOURCE - MySQL
 # ===============================
@@ -12,13 +15,8 @@ spring.mvc.locale=pt_BR
 # ===============================
 # = DATA SOURCE - PostGreSQL
 # ===============================
- Set here configurations for the database connection
+# Set here configurations for the database connection
  spring.datasource.driverClassName=org.postgresql.Driver
- spring.datasource.maxActive=10
- spring.datasource.maxIdle=5
- spring.datasource.minIdle=2
- spring.datasource.initialSize=5
- spring.datasource.removeAbandoned=true
 
  spring.datasource.url=jdbc:postgresql://localhost:5432/petshopbd?createDatabaseIfNotExist=true&useSSL=false
  spring.datasource.username=UAtanes
@@ -65,10 +63,3 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 # ===============================
 spring.thymeleaf.mode=LEGACYHTML5
 spring.thymeleaf.cache=false
-
-# ===============================
-# = Controle das imagens gravadas
-# ===============================
-
-petshop.disco.raiz=/gestaopetshop
-petshop.disco.diretorio-imagens=/gestaopetshop/imagens
