--- a/Gestao_PetShop/pom.xml
+++ b/Gestao_PetShop/pom.xml
@@ -136,8 +136,12 @@
 			<artifactId>jackson-databind</artifactId>
 		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java <dependency> 
-			<groupId>mysql</groupId> <artifactId>mysql-connector-java</artifactId> </dependency> -->
+		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java 
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+		</dependency>
+		-->
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
